css/style.css
body {
    margin: 0;
    font-family: "Lato", sans-serif;
    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
    font-weight: 400;
}

section {
    padding: 1rem 0;
}

.highlighted-section {
    background-color: #eee;
}

.highlighted-section-2 {
    background-color: #d7d7d7;
}

section.background-img-section {
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    box-shadow: none;
    border: none;
    transition: background-image 200ms ease-in-out;
}

section .section-title {
    padding: 4px;
    /* border-bottom: 1px solid rgba(0, 0, 0, 0.54); */
    text-transform: uppercase;
    letter-spacing: 0.4em;
    text-indent: 0.4em;
}

a {
    color: #007bff;
    text-decoration: none;
    background-color: transparent;
}

b {
    font-size: 120%;
}

button,
input,
textarea {
    font-family: inherit;
}

button {
    position: relative;
    overflow: hidden;
    outline: none;
}

input {
    width: 100%;
    font-size: 1rem;
}

img {
    border: 0;
}

/* #region Material Icons */

.material-icons {
    vertical-align: middle;
}

.material-icons.tiny {
    font-size: 1rem !important;
}

.material-icons.small {
    font-size: 2rem !important;
}

.material-icons.medium {
    font-size: 3rem !important;
}

.material-icons.large {
    font-size: 4rem !important;
}

.dark-gray .material-icons {
    color: hsla(0, 0%, 100%, 0.54);
}

/* #endregion */

/* #region Colors */

.blue {
    background-color: #2196f3 !important;
    border-color: #2196f3 !important;
    color: #fff !important;
}

.red {
    background-color: #f44336 !important;
    border-color: #f44336 !important;
    color: #fff !important;
}

.green {
    background-color: #4caf50 !important;
    border-color: #4caf50 !important;
    color: #fff !important;
}

.light-green {
    background-color: #8bc34a !important;
    border-color: #a0c66f !important;
    color: #000 !important;
}

.yellow {
    background-color: #ffc107 !important;
    border-color: #ffc107 !important;
    color: #000 !important;
}

.light-gray {
    background-color: #f5f5f5 !important;
    border-color: #f5f5f5 !important;
    color: #000 !important;
}

.dark-gray {
    background-color: #424242 !important;
    border-color: #424242 !important;
    color: #fff !important;
}

.white {
    background-color: #fff !important;
}

.transparent {
    background-color: transparent !important;
}

.flat {
    /* background-color: transparent !important; */
    box-shadow: none !important;
}

.raised {
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12),
        0 3px 1px -2px rgba(0, 0, 0, 0.2);
}

.raised-2 {
    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
        0px 4px 5px 0px rgba(0, 0, 0, 0.14),
        0px 1px 10px 0px rgba(0, 0, 0, 0.12);
}

.dark-transparent {
    background-color: rgba(0, 0, 0, 0.8) !important;
}

.white-transparent {
    background-color: rgba(255, 255, 255, 0.2) !important;
}

/* #endregion */

/* #region Typography */

.display-4,
.display-3,
.display-2,
.display-1 {
    margin: 14px 0;
}

.headline,
.title,
.subheading-1,
.subheading-2,
.body-1,
.body-2,
.caption {
    /* margin: 10px 0; */
}

.display-4 {
    font-size: 112px !important;
    font-weight: 300 !important;
    line-height: 128px !important;
}

.display-3 {
    font-size: 56px !important;
    font-weight: 400 !important;
    line-height: 84px !important;
}

.display-2 {
    font-size: 45px !important;
    font-weight: 400 !important;
    line-height: 48px !important;
}

.display-1 {
    font-size: 34px !important;
    font-weight: 400 !important;
    line-height: 40px !important;
}

.headline {
    font-size: 24px !important;
    font-weight: 400 !important;
    line-height: 32px !important;
}

.title {
    font-size: 20px !important;
    font-weight: 500 !important;
    line-height: 28px !important;
}

.subheading-2 {
    font-size: 18px !important;
    font-weight: 500 !important;
    line-height: 28px !important;
}

.subheading-1 {
    font-size: 16px !important;
    font-weight: 400 !important;
    line-height: 24px !important;
}

.body-2 {
    font-size: 14px !important;
    font-weight: 500 !important;
    line-height: 24px !important;
}

.body-1 {
    font-size: 14px !important;
    font-weight: 400 !important;
    line-height: 20px !important;
}

.caption {
    font-size: 12px !important;
    font-weight: 400 !important;
    line-height: 16px !important;
}

.text-center {
    text-align: center !important;
}

.text-left {
    text-align: left !important;
}

.text-right {
    text-align: right !important;
}

.subheader {
    margin: 0;
    padding: 0 16px;
    display: flex;
    align-items: center;
    min-height: 48px;
    line-height: 1.25em;
    font-size: 14px;
    font-weight: 500;
    color: rgba(0, 0, 0, 0.54);
}

.helper-text {
    display: inline-flex;
    align-items: center;
    line-height: 1.2;
    padding: 0 0.5rem;
    font-size: 12px;
    white-space: normal;
    vertical-align: middle;
    color: rgba(0, 0, 0, 0.87);
}

.black-text-primary {
    color: rgba(0, 0, 0, 0.87) !important;
}

.white-text-primary {
    color: rgba(255, 255, 255, 0.87) !important;
}

.white-text-secondary {
    color: rgba(255, 255, 255, 0.54) !important;
}

.text-align-right {
    text-align: right;
}

/* #endregion */

/* #region Circle */

.circle {
    width: 64px !important;
    height: 64px !important;
    padding: 0 !important;
    border-radius: 50% !important;
}

/* #endregion */

/* #region Effects */

.ripple {
    position: absolute;
    z-index: 1;
    border-radius: 50%;
    transform: scale(0);
    background: rgba(0, 0, 0, 0.5);
    animation: ripple 400ms linear;
}
/* ... */

